--- a/Taskman/Taskman.csproj
+++ b/Taskman/Taskman.csproj
@@ -65,6 +65,8 @@
     <Compile Include="gtk-gui\generated.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="MainWin.cs" />
+    <Compile Include="gtk-gui\Taskman.Gui.MainWin.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
