--- a/Taskman/Taskman.csproj
+++ b/Taskman/Taskman.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProjectGuid>{A3C44A1A-5A01-4B5D-B1C4-884E2F9DD01C}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Taskman.Gtk</RootNamespace>
+    <RootNamespace>Taskman.Gui</RootNamespace>
     <AssemblyName>Taskman</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
@@ -65,6 +65,8 @@
     <Compile Include="gtk-gui\generated.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="gtk-gui\Taskman.Gui.Main.cs" />
+    <Compile Include="gtk-gui\Taskman.Gui.MainWin.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
