Linking with glade I

--- a/Taskman/Taskman.csproj
+++ b/Taskman/Taskman.csproj
@@ -88,5 +88,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="MainWin.glade">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
