--- a/Taskman.Core/Taskman.Core.csproj
+++ b/Taskman.Core/Taskman.Core.csproj
@@ -36,6 +36,8 @@
     <Compile Include="Task.cs" />
     <Compile Include="TaskStatus.cs" />
     <Compile Include="TaskCollection.cs" />
+    <Compile Include="SegmentedTimeSpan.cs" />
+    <Compile Include="TimeInterval.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
