--- a/Taskman/Taskman.csproj
+++ b/Taskman/Taskman.csproj
@@ -8,6 +8,7 @@
     <RootNamespace>Taskman.Gui</RootNamespace>
     <AssemblyName>Taskman</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <StartupObject>Taskman.Gui.MainClass</StartupObject>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
