--- a/Taskman/Taskman.csproj
+++ b/Taskman/Taskman.csproj
@@ -60,7 +60,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TaskEntry.cs" />
+    <Compile Include="ColAssign.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\gtk-sharp3.3.22.0.0\build\gtk-sharp3.targets" Condition="Exists('..\packages\gtk-sharp3.3.22.0.0\build\gtk-sharp3.targets')" />
