--- a/Taskman.Core/Taskman.Core.csproj
+++ b/Taskman.Core/Taskman.Core.csproj
@@ -8,6 +8,7 @@
     <RootNamespace>Taskman</RootNamespace>
     <AssemblyName>Taskman.Core</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <ReleaseVersion>0.0.1</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
