--- a/Taskman/Taskman.csproj
+++ b/Taskman/Taskman.csproj
@@ -9,6 +9,7 @@
     <AssemblyName>Taskman</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <StartupObject>Taskman.Gui.MainClass</StartupObject>
+    <ReleaseVersion>0.0.1</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
